# flutter_playground_cpp

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/nl/alten/flutterplayground/cpp/flutter_playground_cpp_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_playground_cpp.podspec
ios/Classes/: flutter_playground_cpp.c
lib/: chat_client.dart  flutter_playground_cpp.dart  flutter_playground_cpp_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_playground_cpp.podspec
macos/Classes/: flutter_playground_cpp.cpp
src/: CMakeLists.txt  flutter_playground_cpp.c  flutter_playground_cpp.cpp  flutter_playground_cpp.h  http_client.cpp
src/chat/: chat_api.cpp  chat_api.h
windows/: CMakeLists.txt
